# 3.-Semsterprojekt

./: .gitignore  BackupDatabase.sql  Joint_slut_backup.csv  Kast_bold_backup.csv  Kast_data_backup.csv  Kast_kop_backup.csv  README.md  main.cpp  throw.cpp
Calibreringsprojekt/: CMakeLists.txt  main.cpp
Griber/: CMakeLists.txt  gripper.cpp  gripper.h  main.cpp
Homography/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  mouse.h
Kinematics/: readme.txt
Kinematics/src/: .gitignore
RobotToTableCalib/: CMakeLists.txt  cameracali.cpp  cameracali.h  main.cpp  objectcoordinates.cpp  objectcoordinates.h
Vision/src/: objectdetection.cpp
build-Calibreringsprojekt-Desktop-Debug/: CMakeCache.txt  Calibrering.cbp  DisplayImage  DisplayImage.cbp  K1.xml  K2.xml  Kalibreringsfil.txt  Makefile  cmake_install.cmake  k1.xml  k2.xml  k3.xml  k4.xml
build-Homography-Desktop-Debug/: CMakeCache.txt  DisplayImage  DisplayImage.cbp  H1.xml  H2.xml  H3.xml  Homography.cbp  Makefile  cmake_install.cmake
build-RobotToTableCalib-Desktop-Debug/: CMakeCache.txt  Makefile  R2T2.xml  Robot2Table  Robot2Table.cbp  cmake_install.cmake
build-src-Desktop-Debug/: CMakeCache.txt  Makefile  Semesterprojekt  cmake_install.cmake
pylon_openCV/src/: CMakeLists.txt  (+6 more)
src/: CMakeLists.txt  Database.cpp  Database.h  camera.cpp  camera.h  colourdetection.cpp  colourdetection.h  database.cpp  database.h  gripper.cpp  gripper.h  jacobian.cpp  jacobian.h  kinematics.cpp  kinematics.h  main.cpp  objectdetection.cpp  objectdetection.h  pylon.cpp  pylon.h  robot.cpp  robot.h  throw.cpp  throw.h
(+16 files in other folders)
